<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CoffeeMachineV3</string>
    <string name="btn">启动悬浮窗口</string>
    <string name="floating">悬浮窗口</string>
    <string name="stop">移除悬浮窗口</string>
    <string name="btn1">特浓</string>
    <string name="btn2">美式</string>
    <string name="btn3">清洗</string>
    <string name="btn4">初始化</string>
    <string name="btn5">已付款</string>
    <string name="btn6">落杯</string>
    <string name="btn7">落水</string>
    <string name="btn8">落奶粉</string>
    <string name="btn9">换杯组</string>
    <string name="btn10">落糖</string>
    <string name="btn11">key11</string>
    <string name="btn12">key12</string>
    <string name="btn13">key13</string>
    <string name="btn14">key14</string>
    <string name="btn15">key15</string>
    <string name="tab2">支付宝支付</string>
    <string name="tab1">微信支付</string>
    <string name="tab4">Card支付</string>
    <string name="tab3">Appeal支付</string>
    
    <string name="zfb">支付宝</string>
    <string name="weixin">微信</string>
    <string name="cardPay">IC卡支付</string>
    <string name="numberPay">卡券支付</string>
    
    
    <string name="McUartName">/dev/ttymxc3</string>
    <string name="IoUartName">/dev/ttymxc4</string>
    
    
    
    
    <string name="cmd1_ready">准备就绪</string>
    <string name="cmd1_heating">加热中</string>
    <string name="cmd1_rinsing">清洗中</string>
    <string name="cmd1_openTab">打开右旋钮</string>
    <string name="cmd1_close_tab">关闭右旋钮</string>
    <string name="cmd1_too_hot">过热</string>
    <string name="cmd1_mild">清淡</string>
    <string name="cmd1_strong">浓郁</string>
    <string name="cmd1_2cpus">双杯</string>
    <string name="cmd1_cleaning">系统清洗中</string>
    <string name="cmd1_emptying">清空系统</string>
    <string name="cmd1_decalc_on">除垢中</string>
    <string name="cmd1_add_tablet">加热清洗剂</string>
    <string name="cmd1_no_tray">无底盘</string>
    <string name="cmd1_waiting">稍等</string>
    <string name="cmd1_fault">故障</string>
    <string name="cmd1_fault1">故障1</string>
    <string name="cmd1_fault2">故障2</string>
    <string name="cmd1_fault3">故障3</string>
    <string name="cmd1_fault4">故障4</string>
    <string name="cmd1_fault5">故障5</string>
    <string name="cmd1_fault6">故障6</string>
    <string name="cmd1_standby">休眠</string>
    <string name="cmd1_hold">保持</string>
    <string name="cmd1_powder">咖啡粉</string>
    <string name="cmd1_normal">普通</string>
    <string name="cmd1_steam">奶泡</string>
    <string name="cmd1_myCoffee">我的咖啡杯</string>
    <string name="cmd1_fill_powder">请加入咖啡粉</string>
    <string name="cmd1_water">热水</string>
    <string name="cmd1_espresso">特浓咖啡</string>
    <string name="cmd1_americano">美式咖啡</string>
    <string name="cmd1_filterReady">过滤器准备就绪</string>
    <string name="cmd1_insertOpenTab">插入过滤器并打开右旋钮</string>
    <string name="cmd1_rinsingFilter">清洗过滤器</string>
    <string name="cmd1_pressRinse">请按清洗键</string>
    <string name="cmd1_fillWater">请加入纯水</string>
    <string name="cmd1_fillingSystem">填充系统</string>
    <string name="cmd1_fillBeans">请加入咖啡豆</string>
    <string name="cmd1_selectCupButton">选择单双杯键</string>
    <string name="cmd1_steamReady">奶泡准备就绪</string>
    <string name="cmd1_cleanReady">系统清洗准备就绪</string>
    <string name="cmd1_emptyTRay">清空地盘</string>
    <string name="cmd1_trayMissing">缺少底盘</string>
    <string name="cmd1_chgFilterOpenTab">更换过滤器并打开右旋钮</string>
    <string name="cmd1_decalcytyReady">除垢准备就绪</string>
    <string name="cmd1_solventInTank">水箱加除垢剂并打开右旋</string>
    <string name="cmd1_addMorePowder">增加咖啡粉</string>
    <string name="cmd1_emptyGround">清空废渣盒</string>
    <string name="cmd1_unknow">未知状态</string>
    
     <string name="chooseTaste">"请选择口味"</string>   
    <string name="espresso">意式咖啡</string>
    <string name="american">美式咖啡</string>
    <string name="latte">拿铁</string>
    <string name="cappuccino">卡布奇诺</string>
    <string name="sugar">糖</string>
    <string name="water">白开水</string>
    <string name="milk">奶</string>
    <string name="init">初始化</string>
    <string name="clean">清洗</string>
    <string name="paySuccess">支付成功</string>
    <string name="connectFailed">网络请求失败</string>
    <string name="createQrSuccess">获取二维码成功</string>
    <string name="createQrFailed">获取二维码成功</string>
    <string name="missingParas">"物品名称和单价不能为空"</string>
    <string name="request">"我们会尽快核实，属实将返回您的付款"</string>
    <string name="noCup">"机器中无纸杯"</string>
    <string name="hasCup">"落杯成功"</string>
    <string name="cupStuck">"杯子卡住了，请掏出卡住杯子"</string>
    <string name="finished">"制作完成"</string>
    <string name="takeCup">"请取杯"</string>
    <string name="hasDirtyCup">"请移除已有杯子"</string>
    <string name="maintain">"系统维护..."</string>
    <string name="coffee_type1">"意式咖啡|￥5"</string>
    <string name="coffee_type2">"美式咖啡|￥8"</string>
    <string name="coffee_type3">"卡布奇诺|￥15"</string>
    <string name="coffee_type4">"拿铁|￥18"</string>
    <string name="coffee_type5">"白开水|￥1"</string>
    <string name="coffee_type6">"开发中"</string>
    <string name="t_otherPay">"使用其他\n付款方式"</string>
    <string name="cancel">"取消"</string>
    <string name="ok">"确定"</string>
    <string name="pleaseChooseCoffee">"请选择咖啡"</string>
    <string name="pleaseChoosePay">"请选择支付方式"</string>
    <string name="chooseWeixin">"请使用微信支付"</string>
    <string name="chooseZfb">"请使用支付宝支付"</string>
    <string name="chooseAppeal">"请使用Appeal支付"</string>
    <string name="chooseCard">"请使用Card支付"</string>
    <string name="toAssisTimeOut">"与辅助板通信超时"</string>
    <string name="dropPowder">"正在制作咖啡"</string>
    <string name="startDropCup">"正在落杯"</string>
    <string name="comErr">"无法与咖啡机通信"</string>
    <string name="AssiscomErr">"无法与辅助板通信"</string>
    <string name="putCup">"请放纸杯"</string>
    <string name="hide">隐藏</string>
    <string name="debug">调试模式(无需支付)</string>
    <string name="update_Price">"sync_device_goods_price"</string>
    <string name="mcStateLable">主咖啡机状态：</string>
    <string name="assistStateLable">辅助系统状态：</string>
    <string name="netStateLable">网络状态：</string>
    <string name="nonet">无法连接到网络</string>
    <string name="hasnet">已连接网络，等待服务器连接</string>
    <string name="connectServer">已连接服务器</string>
    <string name="needbean">需要咖啡豆才能打咖啡</string>
    <string name="noneedbean">无需咖啡豆即可打咖啡</string>
    <string name="devMode">开发者菜单</string>
    <string name="timeOut">制作超时，稍后退回您的付款</string>
    <string name="inMaking">制作中，请稍等...</string>
    <string name="noWater">系统缺水</string>
    <string name="alLeftTime">总剩余时间约：</string>
    <string name="refund">如已支付我们将核实后退回您的付款</string>
    <string name="alert_timeout">制作超时</string>
    <string name="alert_title">错误</string>
    <string name="retry">重试</string>
    <string name="giveup">申请退款</string>
    <string name="title_sweet">甜度选择</string>
    <string name="title_pay">支付选项</string>
    <string name="title_state">状态提示</string>
    <string name="sugar0">无</string>
    <string name="sugar1">低</string>
    <string name="sugar2">中</string>
    <string name="sugar3">高</string>
    <string name="qr_pay">扫码支付</string>
    <string name="icPay">IC卡支付</string>
    <string name="numPay">卡券支付</string>
    <string name="work">工作正常</string>
    <string name="no">无</string>
    <string name="low">低</string>
    <string name="medium">中</string>
    <string name="high">高</string>
    <string name="wait">等待更新</string>
    <string name="name_americano">Americano</string>
    <string name="name_Latte">Latte</string>
    <string name="name_Espresso">Espresso</string>
    <string name="name_Cappuccino">Cappuccino</string>
    <string name="name_Water">Water</string>
    <string name="name_Milk">Milk</string>
    <string name="name_chocolate">Chocolate</string>
    <string name="errgetXml">获取配方表失败</string>
    <string name="deviceId">设备ID:</string>
    <string name="update">检查更新</string>
    <string name="error">错误</string>
    <string name="errorToserver">连接更新服务器异常</string>
    <string name="getVerError">获取版本异常</string>
    <string name="errorGetServerVer">获取服务器端应用出错</string>
    <string name="serverVer">服务器端版本:</string>
    <string name="curVer">当前版本:</string>
    <string name="doNow">立刻更新</string>
    <string name="nextTime">下次再说</string>
    <string name="newest">已经是最新版本</string>
    <string name="unknowError">更新出错</string>
    <string name="heating">使能加热</string>
    <string name="setVolume">音量设置</string>
    <string name="minValue">最小值</string>
    <string name="maxValue">最大值</string>
    <string name="curValue">当前值</string>
    <string name="stock_beans">咖啡豆量</string>
    <string name="stock_water">水量</string>
      <string name="stock_cups">杯子数</string>
    <string name="stock_powder1">粉量1</string>
    <string name="stock_powder2">粉量2</string>
    <string name="stock_powder3">粉量3</string>
    <string name="manage_stock">库存管理</string>
    <string name="rest">恢复</string>
    <string name="hasEmpty">数据不能为空，请填写完整！</string>
    <string name="set_stock">设置库存</string>
    <string name="loginFailed">服务器注册失败</string>
    <string name="errorState">错误状态：</string>
    <string name="mc_temper">咖啡机当前温度：</string>
    
    
    	
	<string name="mc_error1">与咖啡机通信超时</string>
    <string name="mc_error2">与辅助机超时</string>
    <string name="mc_error3">卡杯</string>
    
    <string name="mc_error4">故障1</string>
    <string name="mc_error5">故障2</string>
    <string name="mc_error6">故障3</string>
    <string name="mc_error7">故障4</string>
    <string name="mc_error8">故障5</string>
    <string name="mc_error9">故障6</string>
    <string name="mc_error10">获取工艺表失败</string> 
    <string name="mc_error21">缺豆</string>
    <string name="mc_error22">粉槽1缺粉</string>
    <string name="mc_error23">粉槽2缺粉</string>
    <string name="mc_error24">粉槽3缺粉</string>
    <string name="mc_error25">缺纸杯</string>
	<string name="mc_error26">缺水</string>
	<string name="mc_waiting">系统自处理中</string>
    <string name="empty">无</string>
     <string name="orgPrice">原价￥</string>
    <string name="mc_error27">未连接服务器</string>
    <string name="version">v3.3.4-160819-4</string>
    

</resources>