<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|top"
    android:clickable="true"
    >
	<LinearLayout
	android:id="@+id/layout_bg"
    android:orientation="vertical"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="@dimen/dialog_paddingside"
    android:background="@color/white_bg"
    >  
    
    <TextView
    	android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="@dimen/maintain_text_size"
       android:textColor="@color/brown_title"
       android:text="@string/manage_stock"/> 
	<GridLayout 
    android:layout_width="match_parent"  
    android:layout_height="wrap_content"  
    android:orientation="horizontal"  
    android:rowCount="7"  
    android:columnCount="4" >  
    <TextView 
    	android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/devState_text_size"
        android:textColor="@color/brown_title"
        android:text=""    
	    />
	<TextView 
    	android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/devState_text_size"
        android:textColor="@color/brown_title"
        android:text="@string/minValue"    
	    />
	<TextView 
    	android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/devState_text_size"
        android:textColor="@color/brown_title"
        android:text="@string/maxValue"
	    
	    />
	<TextView 
   	android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="@dimen/devState_text_size"
       android:textColor="@color/brown_title"
       android:text="@string/curValue"
    />
	
	<TextView 
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="@dimen/devState_text_size"
       android:textColor="@color/brown_title"
       android:text="@string/stock_beans"
    />
	<EditText 
	   android:id="@+id/edt_1_1"
	   android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="@dimen/devState_text_size"
       android:textColor="@color/brown_title"
        android:inputType="number"
	    />
	<EditText 
	   android:id="@+id/edt_1_2"
	   android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="@dimen/devState_text_size"
       android:textColor="@color/brown_title"
        android:inputType="number"
	    />	
	<EditText 
	   android:id="@+id/edt_1_3"
	   android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="@dimen/devState_text_size"
       android:textColor="@color/brown_title"
        android:inputType="number"
	    />	
	<TextView 
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="@dimen/devState_text_size"
       android:textColor="@color/brown_title"
       android:text="@string/stock_water"

    />
	<EditText 
	   android:id="@+id/edt_2_1"
	   android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="@dimen/devState_text_size"
       android:textColor="@color/brown_title"
        android:inputType="number"
	    />
	<EditText 
	   android:id="@+id/edt_2_2"
	   android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="@dimen/devState_text_size"
       android:textColor="@color/brown_title"
        android:inputType="number"
	    />	
	<EditText 
	   android:id="@+id/edt_2_3"
	   android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="@dimen/devState_text_size"
       android:textColor="@color/brown_title"
        android:inputType="number"
	    />		    
	<TextView 
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="@dimen/devState_text_size"
       android:textColor="@color/brown_title"
       android:text="@string/stock_cups"
   
    />
	<EditText 
	   android:id="@+id/edt_3_1"
	   android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="@dimen/devState_text_size"
       android:textColor="@color/brown_title"
        android:inputType="number"
	    />
	<EditText 
	   android:id="@+id/edt_3_2"
	   android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="@dimen/devState_text_size"
       android:textColor="@color/brown_title"
        android:inputType="number"
	    />	
	<EditText 
	   android:id="@+id/edt_3_3"
	   android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="@dimen/devState_text_size"
       android:textColor="@color/brown_title"
        android:inputType="number"
	    />		
	<TextView 
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="@dimen/devState_text_size"
       android:textColor="@color/brown_title"
       android:text="@string/stock_powder1"
    />
	<EditText 
	   android:id="@+id/edt_4_1"
	   android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="@dimen/devState_text_size"
       android:textColor="@color/brown_title"
        android:inputType="number"
	    />
	<EditText 
	   android:id="@+id/edt_4_2"
	   android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="@dimen/devState_text_size"
       android:textColor="@color/brown_title"
        android:inputType="number"
	    />	
	<EditText 
	   android:id="@+id/edt_4_3"
	   android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="@dimen/devState_text_size"
       android:textColor="@color/brown_title"
        android:inputType="number"
	    />	
 	<TextView 
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="@dimen/devState_text_size"
       android:textColor="@color/brown_title"
       android:text="@string/stock_powder2"
    />
	<EditText 
	   android:id="@+id/edt_5_1"
	   android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="@dimen/devState_text_size"
       android:textColor="@color/brown_title"
        android:inputType="number"
	    />
	<EditText 
	   android:id="@+id/edt_5_2"
	   android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="@dimen/devState_text_size"
       android:textColor="@color/brown_title"
        android:inputType="number"
	    />	
	<EditText 
	   android:id="@+id/edt_5_3"
	   android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="@dimen/devState_text_size"
       android:textColor="@color/brown_title"
        android:inputType="number"
	    />	
	     	<TextView 
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="@dimen/devState_text_size"
       android:textColor="@color/brown_title"
       android:text="@string/stock_powder3"
    />
	<EditText 
	   android:id="@+id/edt_6_1"
	   android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="@dimen/devState_text_size"
       android:textColor="@color/brown_title"
        android:inputType="number"
	    />
	<EditText 
	   android:id="@+id/edt_6_2"
	   android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="@dimen/devState_text_size"
       android:textColor="@color/brown_title"
        android:inputType="number"
	    />	
	<EditText 
	   android:id="@+id/edt_6_3"
	   android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="@dimen/devState_text_size"
       android:textColor="@color/brown_title"
       android:inputType="number"
	    />	
  </GridLayout> 

       	       <LinearLayout 	    
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:gravity="center"
		    android:orientation="horizontal"
			     >
		         <Button
	   	        android:id="@+id/btn_cancel"
		    	android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="@dimen/dialog_state_size"
		        android:text="@string/cancel" 
		        android:textColor="@color/brown_title"
		        /> 
		        <Button
	   	        android:id="@+id/btn_reset"
		    	android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="@dimen/dialog_state_size"
		        android:text="@string/rest"
		        android:textColor="@color/brown_title"
		        /> 
		        <Button 
			    android:id="@+id/btn_ok"
	    		android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="@dimen/dialog_state_size"
		        android:text="@string/ok"
		        android:textColor="@color/brown_title"
			    />

        	</LinearLayout>
  
	      


  </LinearLayout>	  
	
 </LinearLayout>	
