<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom|left"
    >
	<LinearLayout
	android:id="@+id/layout_bg"
    android:orientation="vertical"
    android:layout_marginLeft="@dimen/dialog_marginleft_l"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/dialog_paddingside"
    android:paddingLeft="@dimen/dialog_paddingside"
    android:paddingRight="@dimen/dialog_paddingside"
    android:background="@drawable/bg_notice_l"
    android:layout_marginBottom="@dimen/dialog_margin_bottom"
    >  
    <TextView 
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dialog_title_size"
        android:textColor="@color/orange_title"
        android:gravity="center"
        android:text="@string/title_sweet"
        />
	<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

	android:gravity="center"
    >      
    <GridLayout 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:rowCount="2"   
    android:columnCount="2" 
    android:layout_gravity="center"
    android:orientation="horizontal"
        >

  	             <CheckBox     
	            android:id="@+id/radio_1"  
	            android:layout_width="wrap_content"     
	            android:layout_height="wrap_content"  
	            android:text="@string/sugar0"  
	            android:textSize="@dimen/size_coffee_title"   
	            android:textColor="@color/brown_dialog"    
	            android:layout_weight="1"  
	            android:button="@drawable/sweet_radio1" 
	            android:layout_marginTop="@dimen/dialog_radio_padding"
	            android:layout_marginBottom="@dimen/dialog_radio_padding"
	            android:layout_marginRight="@dimen/dialog_radio_margin_side"
        		/>
  	            <CheckBox     
	            android:id="@+id/radio_2"  
	            android:layout_width="wrap_content"     
	            android:layout_height="wrap_content"  
	            android:text="@string/sugar1"  
	            android:textSize="@dimen/size_coffee_title"   
	            android:textColor="@color/brown_dialog"    
	            android:layout_weight="1"  
	            android:button="@drawable/sweet_radio2" 
	            android:layout_marginTop="@dimen/dialog_radio_padding"
	            android:layout_marginBottom="@dimen/dialog_radio_padding"
	             android:layout_marginLeft="@dimen/dialog_radio_margin_side"
        		/>
  	            <CheckBox     
	            android:id="@+id/radio_3"  
	            android:layout_width="wrap_content"     
	            android:layout_height="wrap_content"  
	            android:text="@string/sugar2"  
	            android:textSize="@dimen/size_coffee_title"   
	            android:textColor="@color/brown_dialog"    
	            android:layout_weight="1"  
	            android:button="@drawable/sweet_radio3" 
	            android:layout_marginTop="@dimen/dialog_radio_padding"
	            android:layout_marginBottom="@dimen/dialog_radio_padding"
	            android:layout_marginRight="@dimen/dialog_radio_margin_side"
        		/>
  	            <CheckBox     
	            android:id="@+id/radio_4"  
	            android:layout_width="wrap_content"     
	            android:layout_height="wrap_content"  
	            android:text="@string/sugar3"  
	            android:textSize="@dimen/size_coffee_title"   
	            android:textColor="@color/brown_dialog"    
	            android:layout_weight="1"  
	            android:button="@drawable/sweet_radio4" 
	            android:layout_marginTop="@dimen/dialog_radio_padding"
	            android:layout_marginBottom="@dimen/dialog_radio_padding"
	            android:layout_marginLeft="@dimen/dialog_radio_margin_side"
	            
        		/>      
        
    </GridLayout>
       </LinearLayout> 
  
    <!-- 这个可以自由添加视图 -->
    <LinearLayout 
        android:id="@+id/dialog_live"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       >
       
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/dialog_button_group"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp">
        
        <Button 
            android:id="@+id/dialog_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:paddingTop="@dimen/btn_padding"
			android:paddingBottom="@dimen/btn_padding"
            android:text="@string/ok"
            android:background="@drawable/bg_button"
            android:textSize="@dimen/size_button_ok"
            android:layout_marginRight="@dimen/dialog_button_marginside"
            android:textColor="@color/brown_dialog"/>
        
         <Button 
            android:id="@+id/dialog_cannel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			 android:paddingTop="@dimen/btn_padding"
			 android:paddingBottom="@dimen/btn_padding"
            android:text="@string/cancel"
            android:background="@drawable/bg_button"
            android:textSize="@dimen/size_button_ok"
            android:layout_marginLeft="@dimen/dialog_button_marginside"
            android:textColor="@color/brown_dialog"/>
        
    </LinearLayout>
</LinearLayout>    
    
    
</LinearLayout>      
    
    
   

